--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@ body {
     height: 30px;
     background-color: #f08a26ff;
 }
-.title{
-    color: white;
+#record{
+    height: 500px;
+    width: auto;
+    margin-top: 80px;
+    margin-left: 80px;
 }
