--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,11 @@ body {
     font-size: 2.5em;
 }
 
+.content{
+    display: flex;
+    justify-content: space-around;
+}
+
 #record{
     height: 500px;
     margin-top: 80px;
