--- a/templates/index.html
+++ b/templates/index.html
@@ -29,11 +29,11 @@
                     <circle cx="20" cy="25" r="10" fill="#eedabfff"/>
                 </svg>
             </div>
-            <div class='input-boxes'>
-                <input type="text" placeholder="Enter the song name"/>
-                <input type="text" placeholder="Enter the artist name"/>
-                <button type="button">Find your tune's twin</button>
-            </div>
+            <form class='input-boxes' method="POST" action="/find-twin">
+                        <input type="text" name="song" placeholder="Enter the song name"/>
+                        <input type="text" name="artist" placeholder="Enter the artist name"/>
+                        <button type="submit">Find your tune's twin</button>
+            </form>
         </div>
     </body>
 </html>
