--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,16 @@
  {% block content %}
  <div class='content'>
 
+<!-- Can also do <script src="something.js"> </script> -->
+
+    <script>
+        let x = 10;
+        let y = 20;
+        let z = "30";
+        let result = x + y + z;
+        console.log(result)
+    </script>
+
     <div class="svg">
         <svg id="record" height="400" width="400" viewbox="-200 -200 400 400">
             <rect x="-190" y="-190" height="370" width="370" fill="#f08a26ff" stroke="#7b3200ff" stroke-width="15" rx="40" ry="40"/>
