--- a/templates/base.html
+++ b/templates/base.html
@@ -3,15 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>TuneTwin</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class='header'>
             <div class="stripe1">
                 <h1 class="title">TuneTwin</h1>
             </div>
-            <div class="stripe2"></div>
-            <div class="stripe3"></div>
         </div>
         {% block content %}
         {% endblock %}
