--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,20 @@
 {% extends "base.html" %}
  {% block content %}
- <div class='content'>
-
-<!-- Can also do <script src="something.js"> </script> -->
-
-    <script>
-        let x = 10;
-        let y = 20;
-        let z = "30";
-        let result = x + y + z;
-        console.log(result)
-    </script>
-
-    <div class="svg">
-        <svg id="record" height="400" width="400" viewbox="-200 -200 400 400">
-            <rect x="-190" y="-190" height="370" width="370" fill="#f08a26ff" stroke="#7b3200ff" stroke-width="15" rx="40" ry="40"/>
-            <circle cx="-50" cy="40" r="115" fill="#000000"/>
-            <circle cx="-50" cy="40" r="44" fill="#eb5e16ff"/>
-            <circle cx="-50" cy="40" r="14" fill="#000000"/>
-            <rect x="-135" y="-135" height="30" width="135" fill="#eb5e16ff" rx="5" ry="5"/>
-            <line x1="-135" y1="-120" x2="0" y2="-120" stroke="#000000" stroke-width="5" />
-            <rect x="-105" y="-132.5" height="25" width="12" fill="#000000" rx="4" ry="4"/>
-            <rect x="65" y="-140" height="40" width="70" fill="#eedabfff" rx="7" ry="7" />
-            <line x1="100" y1="-100" x2="100" y2="-20" stroke="#eedabfff" stroke-width="5"/>
-            <line x1="101" y1="-22" x2="20" y2="25" stroke="#eedabfff" stroke-width="5"/>
-            <circle cx="20" cy="25" r="10" fill="#eedabfff"/>
-        </svg>
+ <div class="content">
+    <div class="image">
+        <img src="static/images/placeholder.png" id="mic">
     </div>
-    <form class='input-boxes' method="POST" action="/find-twin">
+    <div class="form-container">
+        <form class='form' method="POST" action="/find-twin">
+            <div class="input-boxes">
                 <input type="text" name="song" placeholder="Enter the song name" required/>
+                <div class="text-by">
+                    <p>by</p>
+                </div> 
                 <input type="text" name="artist" placeholder="Enter the artist name" required/>
-                <button type="submit">Find your tune's twin</button>
-    </form>
+            </div>
+            <button type="submit">Find your tune's twin</button>
+        </form>
+    </div>
 </div>
  {% endblock %}
