--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <body>
         <div class='header'>
             <div class="stripe1">
+                <p class="logo">𝄞</p>
                 <h1 class="title">TuneTwin</h1>
             </div>
         </div>
