--- a/static/carousel.css
+++ b/static/carousel.css
@@ -24,14 +24,11 @@
 }
 
 .carousel-item {
-    width: 200px;
-    height: 200px;
-    opacity: 0;
     position: absolute;
+    opacity: 0;
     transition: all 0.3s ease-in-out;
     z-index: 0;
     border-radius: 15px;
-    background-size: cover;
     background-position: center;
     align-items: center;
     justify-content: center;
@@ -43,22 +40,22 @@
     left: 10%;
     opacity: .4;
     width: 200px;
-    height: 200px;
+    height: auto;
 }
 
 
 .carousel-item.index-2{
     left: 17.5%;
     width: 300px;
+    height: auto;
     opacity: 0.8;
-    height: 300px;
     z-index: 1;
 }
 
 .carousel-item.index-3 {
     box-shadow: -2px 5px 33px 6px rgba(0,0,0,0.35);
     height: 400px;
-    width: 400px;
+    width: auto;
     opacity: 1;
     left: 27.5%;
     z-index: 2;
@@ -71,7 +68,6 @@
     opacity: 0.8;
     width: 300px;
     z-index: 1;
-    transform: translateX(-50%);
 }
 
 .carousel-item.index-5 {
@@ -79,7 +75,6 @@
     opacity: .4;
     width: 200px;
     height: 200px;
-    transform: translateX(-100%);
 }
 
 .carousel-item img {
