--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,9 @@
     <body>
         <div class='header'>
             <div class="stripe1">
+                <a href="/">
                 <p class="logo">𝄞</p>
+                </a>
                 <h1 class="title">TuneTwin</h1>
             </div>
         </div>
