--- a/static/carousel.css
+++ b/static/carousel.css
@@ -29,13 +29,13 @@
     opacity: 0;
     transition: all 0.3s ease-in-out;
     z-index: 0;
-    border-radius: 15px;
+    border-radius: 1vw;
     background-position: center;
     align-items: center;
     justify-content: center;
     border-width: 0.3vw; 
     border-style: solid;
-    border-color: #e4ddb9;
+    border-color: #e7e0c2;
 }
 
 
@@ -84,7 +84,7 @@
 }
 
 .carousel-item img {
-    border-radius: 10px;
+    border-radius: 0.8vw;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -92,66 +92,49 @@
 
 .carousel-controls {
     display: flex;
+    justify-content: center; 
+    margin-top: 2vw; 
+}
+
+.carousel-item {
+    position: absolute;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    z-index: 0;
+    border-radius: 1vw;
+    background-position: center;
+    align-items: center;
     justify-content: center;
-    height: 2vw;
+    border-width: 0.3vw;
+    border-style: solid;
+    border-color: #e7e0c2;
+}
+
+.carousel-controls {
+    display: flex;
+    justify-content: center; 
+    position: absolute;
+    bottom: -45vw; 
+    left: -10vw;
+    width: 100%;  
 }
 
 .carousel-controls button {
     background: none;
     border: none;
-    color: #e4ddb9;
-    font-size: 30px;
+    color: #e7e0c2;
+    font-size: 2vw; 
     cursor: pointer;
+    margin: 0 2vw; 
+    padding: 0.5vw 2vw;
+    text-transform: capitalize;
+    transition: transform 0.2s ease;
+    
+
 }
 
-.carousel-controls-button:focus {
-    outline: none;
-}
-
-.carousel-controls-previous{
-    position: relative;
-}
-
-.carousel-controls-previous::before{
-    border: solid #e4ddb9;
-    border-width: 0 5px 5px 0;
-    content: '';
-    display: inline-block;
-    height: 5px;
-    left: -30px;
-    padding: 10px;
-    position: absolute;
-    top: 25%;
-    transform: rotate(135deg) translateY(-50%);
-    transition: left 0.15s ease-in-out;
-    width: 5px;
-}
-
-.carousel-controls-previous:hover::before{
-    left:-40%;
-}
-
-.carousel-controls-next{
-    position: relative;
-}
-
-.carousel-controls-next::before{
-    border: solid #e4ddb9;
-    border-width: 0 5px 5px 0;
-    content: '';
-    display: inline-block;
-    height: 5px;
-    right: -30px;
-    padding: 10px;
-    position: absolute;
-    top: 45%;
-    transform: rotate(-45deg) translateY(-50%);
-    transition: right 0.15s ease-in-out;
-    width: 5px;
-}
-
-.carousel-controls-next:hover:before{
-    right: -40px;
+.carousel-controls button:hover {
+    transform: scale(1.2); 
 }
 
 
@@ -169,15 +152,62 @@
     font-family: 'Seasons';
     left: 0;
     right: 0;
-    color: #e4ddb9;
-    font-size: 1.2vw;
-    gap: 1vw;
+    color: #e7e0c2;
+    font-size: 1.8vw;
+    margin-top: -0.2vw;
     text-align: center;
     padding-left:2vw;
     padding-right:2vw;
 }
 
 
-.controls button:hover {
-    transform: scale(1.2);
+
+.song-display {
+    text-align: center;
+    margin-top: -4vw;
+}
+
+.tune-phrase-top{
+    font-family: 'Seasons';
+    color: #e7e0c2;
+    font-size: 5vw;
+    font-weight: thin;
+}
+.tune-phrase-bottom{
+    font-family: 'Seasons';
+    color: #e7e0c2;
+    font-size: 5vw;
+    font-weight: thin;
+    margin-top: -0.5vw;
+}
+
+.song-info {
+    display: inline-block;
+    text-align: center;
+}
+
+.song-cover {
+    border-radius: 1vw;
+    width: 18vw; 
+    height: 18vw; 
+    object-fit: cover;
+    margin-top: -3.8vw;
+    border-width: 0.3vw; 
+    border-style: solid;
+    border-color: #e7e0c2;
+}
+
+.song-title {
+    font-family: 'Seasons';
+    font-size: 3vw;
+    font-weight: thin;
+    color: #e7e0c2;
+    margin-top: 10px;
+}
+
+.song-artist {
+    font-family: 'SloopScript';
+    font-size: 2vw;
+    color: #e7e0c2; 
+    margin-top: -2vw;
 }
