replace homepage photo

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
  {% block content %}
  <div class="content">
     <div class="image">
-        <img src="static/images/Screenshot 2024-09-01 at 8.04.31 PM.png" id="mic">
+        <img src="static/images/tunetwinpic.jpg" id="mic">
     </div>
     <div class="form-container">
         <form class='form' method="POST" action="/find-twin">
